<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:weightSum="4">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/topleft_btn_default_holo_light"
        android:text="@string/today"
        android:textColor="@color/bold_color"
        android:textSize="35sp"
        android:textStyle="italic"
        android:typeface="sans"
        android:onClick="startToday" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/topright_btn_default_holo_light"
        android:text="@string/next_7_days"
        android:textColor="@color/bold_color"
        android:textSize="35sp"
        android:textStyle="italic"
        android:typeface="sans"
        android:onClick="startNext" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bottomleft_btn_default_holo_light"
        android:text="@string/this_month"
        android:textColor="@color/bold_color"
        android:textSize="35sp"
        android:textStyle="italic"
        android:typeface="sans"
        android:onClick="startThisMonth" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bottomright_btn_default_holo_light"
        android:text="@string/all"
        android:textColor="@color/bold_color"
        android:textSize="35sp"
        android:textStyle="italic"
        android:typeface="sans"
        android:onClick="startAll" />

</LinearLayout>
